--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -12,9 +12,12 @@
 @inject IHtmlLocalizer<AccountResource> L
 @{
     ViewBag.Title = "Join Organization";
-    ViewBag.Description = "Provide your information to join your organization.";
+    ViewBag.MetaTitle = "Become a Member of Your Organization on FormLang (Easy & Secure)";
+    ViewBag.Description = "Quickly join your organization on FormLang. Choose to create a new member account or sign up using SSO (Microsoft/Google). Secure your access & unlock member benefits!";
     ViewBag.Keywords = "join organization";
     ViewBag.ShowResetButton = true;
+
+    var includeNumberLabel = Model.SsoProviders.Count > 0;
 }
 
 <h4 class="mb-2 fw-semibold">
@@ -25,72 +28,103 @@
     <a href="@Url.Page("./Login")">@L["Login"]</a>
 </div>
 
-<h5>
-    Create Your Member Account
-</h5>
+@if (Model.SsoProviders.Count > 0)
+{
+    <div class="alert alert-info d-flex align-items-center" role="alert">
+        Here you can become a member of your organization with <b>two methods</b>. Choose the one that best suits you.
+    </div>
+}
+else
+{
+    <div class="alert alert-info d-flex align-items-center" role="alert">
+        Here you can become a member of your organization by creating your member account.
+    </div>
+}
 
-<p>
-    Provide your information below. 
-</p>
-<div class="alert alert-info d-flex align-items-center" role="alert">
-    To use your SSO account to join your organization, please scroll down or ... 
+<div class="card mb-3">
+    <div class="card-body">
+        <h5 class="card-title">
+            @if (includeNumberLabel)
+            {
+                <span class="me-1">1.</span>
+            }
+            Create Your Member Account
+        </h5>
+        <h6 class="card-subtitle mb-2 text-body-secondary">
+            This method creates a new member profile within your organization.
+        </h6>
+        <p class="card-text">
+            Fill out the simple form below to register as a member in your organization.
+        </p>
+
+        <form method="post">
+
+            <abp-input asp-for="Input.FirstName" autocomplete="given-name" />
+            <abp-input asp-for="Input.LastName" autocomplete="family-name" />
+            <abp-input asp-for="Input.EmailAddress" autocomplete="email" />
+            <div class="mb-3" id="password-wrapper">
+                <label for="Input_Password" class="form-label">@L["DisplayName:Password"]</label>
+                <span> * </span>
+                <div class="input-group">
+                    <input class="form-control" id="Input_Password" type="password" autocomplete="new-password" asp-for="Input.Password" />
+                    <button type="button" class="toggle-password btn btn-outline-secondary">
+                        <i class="toggle-icon far fa-eye"></i>
+                    </button>
+                </div>
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
+            </div>
+            <abp-input asp-for="Input.ConfirmPassword" autocomplete="off" />
+
+            @await Component.InvokeAsync("PolicyConsent")
+
+            @if (Model.IsRecaptchaEnabled)
+            {
+                <div class="mb-3">
+                    @Html.ReCaptcha()
+                </div>
+            }
+
+            <div class="d-grid gap-2">
+                <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
+                    @L["Submit"]
+                    <span class="spinner-box"></span>
+                </abp-button>
+            </div>
+        </form>
+
+    </div>
 </div>
-
-<form method="post">
-
-    <abp-input asp-for="Input.FirstName" autocomplete="given-name" />
-    <abp-input asp-for="Input.LastName" autocomplete="family-name" />
-    <abp-input asp-for="Input.EmailAddress" autocomplete="email" />
-    <div class="mb-3" id="password-wrapper">
-        <label for="Input_Password" class="form-label">@L["DisplayName:Password"]</label>
-        <span> * </span>
-        <div class="input-group">
-            <input class="form-control" id="Input_Password" type="password" autocomplete="new-password" asp-for="Input.Password" />
-            <button type="button" class="toggle-password btn btn-outline-secondary">
-                <i class="toggle-icon far fa-eye"></i>
-            </button>
-        </div>
-        <span asp-validation-for="Input.Password" class="text-danger"></span>
-    </div>
-    <abp-input asp-for="Input.ConfirmPassword" autocomplete="off" />
-
-    @await Component.InvokeAsync("PolicyConsent")
-
-    @if (Model.IsRecaptchaEnabled)
-    {
-        <div class="mb-3">
-            @Html.ReCaptcha()
-        </div>
-    }
-
-    <div class="d-grid gap-2">
-        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
-            @L["Submit"]
-            <span class="spinner-box"></span>
-        </abp-button>
-    </div>
-</form>
 
 <!-- External Auth Providers -->
 <!--List of providers-->
 @if (Model.SsoProviders.Count > 0)
 {
-    <div class="mt-5">
+    <div class="card text-bg-primary mb-3">
+        <div class="card-body">
+            <h5 class="card-title">
+                @if (includeNumberLabel)
+                {
+                    <span class="me-1">2.</span>
+                }
+                Sign Up with SSO
+            </h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">
+                Already have a single sign-on account configured by your organization? Use it to join your organization in seconds!
+            </h6>
+            <p class="card-text">
+                Leverage your existing SSO account to join your organization in seconds.
+                No separate password needed – a secure and convenient way to become a member.
+            </p>
 
-        <h5>Sign Up with SSO methods</h5>
-
-        <p>
-            You can also join your organization using the SSO methods below.
-        </p>
-
-        <div class="d-grid gap-2 mt-3 mb-3">
-            @foreach (var s in Model.SsoProviders)
-            {
-                <a class="btn btn-warning" href="@Url.Page(s.LoginPage)">
-                    @ExternalAuthProviderHelper.GetPrettySsoSignUpName(s.AuthenticationScheme)
-                    <span class="spinner-box"></span>
-                </a>
-            }
+            <div class="d-grid gap-2">
+                @foreach (var s in Model.SsoProviders)
+                {
+                    <a class="btn btn-light" href="@Url.Page(s.LoginPage)">
+                        @ExternalAuthProviderHelper.GetPrettySsoSignUpName(s.AuthenticationScheme)
+                        <span class="spinner-box"></span>
+                    </a>
+                }
+            </div>
         </div>
     </div>
 }
