--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -139,7 +139,7 @@ else
                 {
                     <span class="me-1">2.</span>
                 }
-                Sign Up with SSO
+                Join with Single Sign-On (SSO)
             </h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">
                 Already have a single sign-on account configured by your organization? Use it to join your organization in seconds!
