Renaming FindUser to SelectOrganization

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegisterSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegisterSuccess.cshtml
@@ -56,6 +56,6 @@ else
     </ul>
 
     <div class="d-grid gap-2">
-        <a abp-button="Primary" asp-page="./Login">Login</a>
+        <a abp-button="Primary" asp-page="/Account/Login">Login</a>
     </div>
 }
