--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -85,45 +85,7 @@ else
             <h6 class="card-subtitle mb-2 text-body-secondary">
                 This method creates a new member profile within your organization.
             </h6>
-            <p class="card-text">
-                Fill out the simple form below to register as a member in your organization.
-            </p>
-
-            <form method="post">
-
-                <abp-input asp-for="Input.FirstName" autocomplete="given-name" />
-                <abp-input asp-for="Input.LastName" autocomplete="family-name" />
-                <abp-input asp-for="Input.EmailAddress" autocomplete="email" />
-                <div class="mb-3" id="password-wrapper">
-                    <label for="Input_Password" class="form-label">@L["DisplayName:Password"]</label>
-                    <span> * </span>
-                    <div class="input-group">
-                        <input class="form-control" id="Input_Password" type="password" autocomplete="new-password" asp-for="Input.Password" />
-                        <button type="button" class="toggle-password btn btn-outline-secondary">
-                            <i class="toggle-icon far fa-eye"></i>
-                        </button>
-                    </div>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <abp-input asp-for="Input.ConfirmPassword" autocomplete="off" />
-
-                @await Component.InvokeAsync("PolicyConsent")
-
-                @if (Model.IsRecaptchaEnabled)
-                {
-                    <div class="mb-3">
-                        @Html.ReCaptcha()
-                    </div>
-                }
-
-                <div class="d-grid gap-2">
-                    <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
-                        @L["Submit"]
-                        <span class="spinner-box"></span>
-                    </abp-button>
-                </div>
-            </form>
-
+            <a abp-button="Primary" asp-page="/Account/CreateMember">Start to Create Account</a>            
         </div>
     </div>
 }
