--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/CreateMember.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/CreateMember.cshtml
@@ -21,6 +21,10 @@
 <h4 class="mb-2 fw-semibold">
     Create Your Member Account
 </h4>
+<a class="d-block mb-4" href="@Url.Page("./MemberRegister")">
+    <i class="fas fa-arrow-left"></i>
+    Back
+</a>
 
 <p>
     Fill out the simple form below to register as a member in your organization.
@@ -54,19 +58,12 @@
     }
 
     <div class="d-grid gap-2">
-        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
+        <abp-button type="submit" button-type="Primary" name="Action" value="Input">
             @L["Submit"]
             <span class="spinner-box"></span>
         </abp-button>
+        <a abp-button="Primary" asp-page="/Account/MemberRegister">
+            Cancel
+        </a>
     </div>
 </form>
-
-<!-- todo: Add a condition -->
-<div class="d-flex flex-column align-items-start mt-5 mb-3">
-    <h6>Helpful links</h6>
-    <ul>
-        <li>
-            Already a member? Please <a class="btn btn-link fst-italic" href="@Url.Page("./Login")">@L["Login"]</a>
-        </li>
-    </ul>
-</div>
