--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/CreateMember.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/CreateMember.cshtml
@@ -62,7 +62,7 @@
             @L["Submit"]
             <span class="spinner-box"></span>
         </abp-button>
-        <a abp-button="Primary" asp-page="/Account/MemberRegister">
+        <a abp-button="Secondary" asp-page="/Account/MemberRegister">
             Cancel
         </a>
     </div>
