--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -26,7 +26,7 @@
 <h4 class="mb-2 fw-semibold">
     Join Your Organization
 </h4>
-<a class="d-block mb-4" href="@Url.Page("./SelectOrganization")">
+<a class="d-block mb-4" href="@Url.Page("./FindOrganization")">
     <i class="fas fa-arrow-left"></i>
     Back
 </a>
