--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindOrganization.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindOrganization.cshtml
@@ -10,19 +10,21 @@
 @inject IHtmlLocalizer<AccountResource> L
 @inject IHtmlLocalizer<AbpUiMultiTenancyResource> M
 @{
-    ViewBag.Title = "Sign in to FormLang - Select Your Organization";
+    ViewBag.Title = "Sign in to FormLang - Find Your Organization";
     ViewBag.Description = "Securely access your team's workspace on FormLang. Find & select your organization to log in quickly.";
+    ViewBag.ShowAppTitle = true;
+    ViewBag.HideTenancyView = true;
 }
 
-<h4 class="mb-4 fw-semibold">
+<h4 class="mb-3 fw-semibold">
     Find Your Organization
 </h4>
 
 @if (Model.TenantList != null && Model.TenantList.Count > 0)
 {
-    <div class="alert alert-info d-flex align-items-center" role="alert">
-        Please select one organization below
-    </div>
+    <p>
+       Select your organization 
+    </p>
 
     <form method="post">
 
@@ -33,18 +35,14 @@
                 @L["Continue"]
                 <span class="spinner-box"></span>
             </abp-button>
-            <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
-                    name="Action" value="Cancel" class="mt-3">
-                @L["Back"]
-            </abp-button>
         </div>
     </form>
 }
 else
 {
-    <div class="alert alert-info d-flex align-items-center" role="alert">
+    <p>
         Please type your organization name
-    </div>
+    </p>
 
     <form method="post" spellcheck="false">
 
@@ -63,22 +61,6 @@ else
                 @L["Continue"]
                 <span class="spinner-box"></span>
             </abp-button>
-            <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
-                    name="Action" value="Cancel" class="mt-3">
-                @L["Back"]
-            </abp-button>
         </div>
     </form>
 }
-
-<div class="d-flex flex-column align-items-start mt-5 mb-3">
-    <h6>Helpful links</h6>
-    <ul>
-        <li>
-            <a class="btn btn-link fst-italic" href="@Url.Page("./Register")">@L["Register"]</a>
-        </li>
-        <li>
-            <a class="btn btn-link fst-italic" href="@Url.Page("./MemberRegister")">@L["MemberRegister"]</a>
-        </li>
-    </ul>
-</div>
