--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
@@ -47,7 +47,7 @@
     @if (Model.Input.IsUsingEmailAddress)
     {
         <div class="mb-3">
-            <label class="form-label">@L["DisplayName:EmailAddress"]</label>
+            <label class="form-label">@L["DisplayName:EmailAddress"] <span class="text-danger ms-1">*</span> </label>
             <input asp-for="Input.UserNameOrEmailAddress" class="form-control" autocomplete="email" type="email">
             <span asp-validation-for="Input.UserNameOrEmailAddress" class="text-danger"></span>
         </div>
@@ -55,7 +55,7 @@
     else
     {
         <div class="mb-3">
-            <label class="form-label">@L["DisplayName:UserName"]</label>
+            <label class="form-label">@L["DisplayName:UserName"] <span class="text-danger ms-1">*</span></label>
             <input asp-for="Input.UserNameOrEmailAddress" class="form-control" autocomplete="username">
             <span asp-validation-for="Input.UserNameOrEmailAddress" class="text-danger"></span>
         </div>
