--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
@@ -35,7 +35,7 @@
     <div class="alert alert-warning">
         <p>
             To keep things secure,
-            we need you to activate your account using the link in the welcome email we sent you. Didn't see it? No worries! We can send you a new activation email right away.
+            we need you to activate your account using the link in the email we sent you. Didn't see it? No worries! We can send you a new activation email right away.
         </p>
         <p>
             Click <a href="@reActivationLink">here</a> to request a new activation email.
