--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
@@ -12,8 +12,8 @@
 @inject IHtmlLocalizer<AccountResource> L
 
 @{
-    ViewBag.Title = "Login";
-    ViewBag.Description = "Sign in with your username and password or use SSO to log in quickly and easily";
+    ViewBag.Title = "Sign In";
+    ViewBag.Description = "Sign in with your username/email or use SSO to log in quickly and easily";
     ViewBag.Keywords = "login, sign in, account, SSO, username, email, password";
     ViewBag.HideTenancyView = false;
 
@@ -194,17 +194,15 @@
     </script>
 }
 
-<h4 class="mb-2">Login</h4>
-<div data-bind="visible: hasUserOptions" class="mb-3">
+<h1 class="mb-1 h3">Sign In</h1>
+<div class="mb-4" data-bind="visible: hasUserOptions">
     <a class="go-back" style="cursor:pointer;">
-        <i class="fa fa-arrow-left me-1"></i>
-        Back
+        <i class="fa fa-chevron-left me-1"></i>Back
     </a>
 </div>
-<div data-bind="visible: hasNoUserOptions" class="mb-3">
-    <a href="@Url.Page("./FindOrganization")">
-        <i class="fas fa-arrow-left me-1"></i>
-        Back
+<div class="mb-4" data-bind="visible: hasNoUserOptions">
+    <a  href="@Url.Page("./FindOrganization")">
+        <i class="fas fa-chevron-left me-1"></i>Back
     </a>
 </div>
 
